--- a/views/začetna.css
+++ b/views/začetna.css
@@ -24,9 +24,12 @@ a{
     text-decoration: none;
     letter-spacing: 2px;
     font-size: 30px;
+    transition: 0.6s;
+    border-radius: 24px;
 }
 
 a.glavni{
+    border-radius: 24px;
     font-size: 50px;
     padding: 15px 50px;
 }
