--- a/views/nastavi_stopnjo.html
+++ b/views/nastavi_stopnjo.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nastavi stopnjo</title>
-    <link rel="stylesheet" href="nastavi_stopnjo.css">
+    <link rel="stylesheet" href="/css/nastavi_stopnjo.css">
 </head>
 <body>
     <a href="#">1</a>
