--- a/views/zacetna.html
+++ b/views/zacetna.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memo</title>
-    <link rel="stylesheet" href="začetna.css">
+    <link rel="stylesheet" href="/css/zacetna.css">
 </head>
 <body>
     <a href="#">Tutorial</a>
-    <a href="#">Nastavi stopnjo</a>
-    <a class="glavni" href="#">IGRAJ</a>
+    <a href="/nastavi_stopnjo/">Nastavi stopnjo</a>
+    <a class="glavni" href="/igra/">IGRAJ</a>
     <a href="#">Mojstri</a>
     <a href="#">Moji rezultati</a>
 
