popravki- zamiki vrstic

--- a/views/baza.html
+++ b/views/baza.html
@@ -1,3 +1,5 @@
+%import model
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -10,31 +12,17 @@
     <body>
 
         
-        <table>
-            <tr>
-                <td ></td>
-                <td ></td>
-                <td ></td>
-                <td ></td>
-                <td class="rezultat"> </td>
-            </tr>
-            <tr>
-                <td ></td>
-                <td ></td>
-                <td ></td>
-                <td ></td>
-                <td class="rezultat"> </td>
-            </tr>
-            <tr>
-                <td ></td>
-                <td ></td>
-                <td ></td>
-                <td ></td>
-                <td class="rezultat"> </td>
-            </tr>
-            <tr>
-                <td ></td>
-                <td ></td>
+    <table>
+        <tr>
+            <td ></td>
+            <td ></td>
+            <td ></td>
+            <td ></td>
+            <td class="rezultat"> </td>
+        </tr>
+        <tr>
+            <td ></td>
+            <td ></td>
             <td ></td>
             <td ></td>
             <td class="rezultat"> </td>
@@ -53,7 +41,21 @@
             <td ></td>
             <td class="rezultat"> </td>
         </tr>
-        
+        <tr>
+            <td ></td>
+            <td ></td>
+            <td ></td>
+            <td ></td>
+            <td class="rezultat"> </td>
+        </tr>
+        <tr>
+            <td ></td>
+            <td ></td>
+            <td ></td>
+            <td ></td>
+            <td class="rezultat"> </td>
+        </tr>
+    
     </table>
     
     <p>
