Spletni vmesnik- osnovna postavitev

--- a/views/zacetna.html
+++ b/views/zacetna.html
@@ -10,7 +10,8 @@
 <body>
     <a href="#">Tutorial</a>
     <a href="/nastavi_stopnjo/">Nastavi stopnjo</a>
-    <a class="glavni" href="/igra/">IGRAJ</a>
+    <form action="/igra/" method="post"> <button> IGRAJ</button> </form>
+    <a class="glavni" href="/igra/" method="post">IGRAJ</a>
     <a href="#">Mojstri</a>
     <a href="#">Moji rezultati</a>
 
