--- a/views/prijava.html
+++ b/views/prijava.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Prijava</title>
     <link rel="stylesheet" href="/css/prijava.css">
 </head>
 <body>
-    <form class="box" action="" method="">
+    <form class="box" action="" method="POST">
         <h1>PRIJAVI SE</h1>
-        <input type="text" name="" placeholder="Ime in Priimek">
-        <input type="password" name="" placeholder="Geslo">
-        <input type="submit" name="" value="Prijavi se">
+        <input type="text" name="uporabniško_ime" placeholder="Ime in Priimek">
+        <input type="password" name="geslo" placeholder="Geslo">
+        % if napaka:
+            <h3>{{ napaka }}</h3>
+        % end
+        <input type="submit" value="Prijavi se">
     </form>
     
 </body>
