--- a/css/prijava.css
+++ b/css/prijava.css
@@ -24,6 +24,13 @@ body
     padding-bottom: 20px;
 }
 
+.box h3{
+    font-size: 18px;
+    color: rgb(243, 61, 61);
+    padding-top: 0;
+    padding-bottom: 15px;
+}
+
 .box input[type = "text"],.box input[type = "password"]
 {
     border: 0;
