--- a/views/prijava.html
+++ b/views/prijava.html
@@ -10,7 +10,7 @@
 <body>
     <form class="box" action="" method="POST">
         <h1>PRIJAVI SE</h1>
-        <input type="text" name="uporabniško_ime" placeholder="Ime in Priimek">
+        <input type="text" name="uporabnisko_ime" placeholder="Ime in Priimek">
         <input type="password" name="geslo" placeholder="Geslo">
         % if napaka:
             <h3>{{ napaka }}</h3>
