--- a/views/prijava.html
+++ b/views/prijava.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/prijava.css">
 </head>
 <body>
-    <form class="box" action="" method="POST">
+    <form class="box" method="POST">
         <h1>PRIJAVI SE</h1>
         <input type="text" name="uporabnisko_ime" placeholder="Ime in Priimek">
         <input type="password" name="geslo" placeholder="Geslo">
