Preoblikovanje html, da je funkcionalana

--- a/views/nastavi_stopnjo.html
+++ b/views/nastavi_stopnjo.html
@@ -8,14 +8,16 @@
     <link rel="stylesheet" href="/css/nastavi_stopnjo.css">
 </head>
 <body>
-    <a href="#">1</a>
-    <a href="#">2</a>
-    <a  href="#">3</a>
-    <a href="#">4</a>
-    <a href="#">5</a>
-    <a href="#">6</a>
-    <a href="#">7</a>
-    <input type="submit" name="" value="Potrdi">
-
+    <form action="/nastavi_stopnjo/" method="post">
+        <input type="submit" name="level" value="1">
+        <input type="submit" name="level" value="2">
+        <input type="submit" name="level" value="3">
+        <input type="submit" name="level" value="4">
+        <input type="submit" name="level" value="5">
+        <input type="submit" name="level" value="6">
+        <input type="submit" name="level" value="7">
+    </form>
+    <form action="/nastavi_stopnjo/" method="POST"></form>
+    
 </body>
 </html>
