--- a/views/zacetna.html
+++ b/views/zacetna.html
@@ -8,10 +8,12 @@
     <link rel="stylesheet" href="/css/zacetna.css">
 </head>
 <body>
+    <p>Zdravo {{uporabnik}}!</p>
+
     <a href="#">Tutorial</a>
     <a href="/nastavi_stopnjo/">Nastavi stopnjo</a>
     <form action="/igra/" method="post"> <button> IGRAJ</button> </form>
-    <a class="glavni" href="/igra/" method="post">IGRAJ</a>
+    <a class="glavni" href="/nastavi_stopnjo/" method="post">IGRAJ</a>
     <a href="#">Mojstri</a>
     <a href="#">Moji rezultati</a>
 
