--- a/css/baza.css
+++ b/css/baza.css
@@ -30,10 +30,10 @@ p{
 }
 
 a{
-    background-color: blue;
+    background-color: white;
     padding: 10px 20px;
     margin: 0 15px;
-    border-radius: 30px;
+    border-radius: 50px;
     transition: 0.6s;
     bottom: 20%;
 }
@@ -65,6 +65,18 @@ a{
 
 .P{
     background: pink;
+}
+
+.Č{
+    background: white;
+}
+
+.B{
+    background: black;
+}
+
+.N{
+    background: #21ebff;
 }
 
 
