--- a/css/nastavi_stopnjo.css
+++ b/css/nastavi_stopnjo.css
@@ -14,7 +14,7 @@ body
     min-height: 100vh;
     background-color: black;
 }
-a{
+input[type = "submit"]{
     position: relative;
     padding: 10px 30px;
     margin: 0 15px;
@@ -24,39 +24,19 @@ a{
     font-size: 30px;
     transition: 0.6s;
     border-radius: 24px;
-    border: solid #21ebff
+    border: solid #21ebff;
+    background-color: black;
+    cursor: pointer;
 }
 
-a:hover{
+input[type = "submit"]:hover{
     background: #21ebff;
     color: #111;
     box-shadow: 0 0 50px #21ebff;
 }
 
-a:focus{
+input[type = "submit"]:focus{
     background: #21ebff;
     color: #111;
 }
 
-input[type = "submit"]
-{
-    border: 0;
-    background: none;
-    display: block;
-    margin: 20px 0;
-    text-align: center;
-    border: 2px solid #2ecc71;
-    padding: 14px 40px;
-    outline: none;
-    color:#2ecc71;
-    border-radius: 24px;
-    cursor: pointer;
-    font-size: 20px;
-    transition: 0.25s;
-}
-
-input[type = "submit"]:hover
-{
-   background:#2ecc71; 
-   color:black;
-}
