--- a/css/baza.css
+++ b/css/baza.css
@@ -10,10 +10,10 @@ table{
 
 }
 td{
-    width: 75px;
-    height: 75px;
+    width: 60px;
+    height: 60px;
     font-family: "Arial Unicode MS";
-    font-size: 35px;
+    font-size: 30px;
     border-bottom: black  solid;
     padding: 0;
     margin: 0;
@@ -30,19 +30,39 @@ p{
 }
 
 .opozorilo{
-    font-size: 15px;
+    font-size: 30px;
     color: whitesmoke;
 }
 
 
 a{
-    background-color: white;
+    background-color: rgb(172, 0, 0);
     padding: 10px 20px;
     margin: 0 15px;
     border-radius: 50px;
     transition: 0.6s;
     bottom: 20%;
 }
+
+.nova_igra{
+    padding: 10px 30px;
+    margin: 0 15px;
+    color: #21ebff;
+    text-decoration: none;
+    letter-spacing: 2px;
+    font-size: 30px;
+    transition: 0.6s;
+    border-radius: 24px;
+    border: solid #21ebff;
+    background-color: black;
+}
+
+.nova_igra:hover{
+    background: #21ebff;
+    color: #111;
+}
+
+
 
 
 .R{
@@ -85,3 +105,29 @@ a{
     background: black;
 }
 
+
+
+
+
+input[type = "text"]
+{
+    border: 0;
+    background: none;
+    display: block;
+    margin: 20px auto;
+    text-align: center;
+    border: 2px solid #21ebff;
+    padding: 14px 10px;
+    font-size: 15px;
+    width: 200px;
+    outline: none;
+    color:white;
+    border-radius: 24px;
+    transition: 0.4s;
+}
+
+input[type = "text"]:focus
+{
+    width: 280px;
+    border-color: #2ecc71
+}
