Gumba prijava/registracija

--- a/views/prijava.html
+++ b/views/prijava.html
@@ -17,6 +17,6 @@
         % end
         <input type="submit" value="Prijavi se">
     </form>
-    
+    <a href="/registracija/">Registracija</a>
 </body>
 </html>
