--- a/css/baza.css
+++ b/css/baza.css
@@ -12,7 +12,6 @@ table{
 td{
     width: 60px;
     height: 60px;
-    font-family: "Arial Unicode MS";
     font-size: 30px;
     border-bottom: black  solid;
     padding: 0;
@@ -42,6 +41,7 @@ a{
     border-radius: 50px;
     transition: 0.6s;
     bottom: 20%;
+    font-family: sans-serif;
 }
 
 .nova_igra{
@@ -119,6 +119,7 @@ input[type = "text"]
     border: 2px solid #21ebff;
     padding: 14px 10px;
     font-size: 15px;
+    font-family: sans-serif;
     width: 200px;
     outline: none;
     color:white;
