--- a/css/prijava.css
+++ b/css/prijava.css
@@ -75,3 +75,10 @@ body
 {
    background:#2ecc71; 
 }
+
+a{
+    color: #21ebff;
+    font-size: 20px;
+    font-family: sans-serif;
+    text-align: center;
+}
