--- a/views/registracija.html
+++ b/views/registracija.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/prijava.css">
 </head>
 <body>
-    <form class="box" action="" method="POST">
+    <form class="box" method="POST">
         <h1>REGISTRACIJA</h1>
         <input type="text" name="uporabnisko_ime" placeholder="Ime in Priimek" required>
         <input type="password" name="geslo" placeholder="Geslo" required>
@@ -17,6 +17,7 @@
         % end
         <input type="submit" value="Registriraj se">
     </form>
+    <a href="/prijava/">Prijava</a>
     
 </body>
 </html>
