--- a/views/zacetna.html
+++ b/views/zacetna.html
@@ -13,7 +13,9 @@
     <a class="glavni" href="/nastavi_stopnjo/" method="post">IGRAJ</a>
     <a href="#">Mojstri</a>
     <a href="/moje_igre/">Moje igre</a>
-
+    <form action="/odjava/" method="post">
+        <input type="submit" value="Odjava">
+    </form>
 
 </body>
 </html>
