--- a/views/baza.html
+++ b/views/baza.html
@@ -56,7 +56,7 @@
         <a class="nova_igra" href="/">GLAVNI MENI</a>
 
     % else:
-    <form action="/igraj/" method="POST">
+    <form action="/igraj/" method="POST" autocomplete="off">
         <input type="text" name="ugib">
         <button type="submit"> Ugibaj </button>
         
