--- a/css/baza.css
+++ b/css/baza.css
@@ -4,14 +4,14 @@ body{
 }
 
 table{
-    margin: 90px auto;
+    margin: 60px auto;
     border: solid 25px #08471d;
     background-color: #21ebff;
 
 }
 td{
-    width: 60px;
-    height: 60px;
+    width: 50px;
+    height: 50px;
     font-size: 30px;
     border-bottom: black  solid;
     padding: 0;
@@ -19,8 +19,8 @@ td{
 }
 
 .rezultat{
-    width: 150px;
-    height: 75px;
+    width: 100px;
+    height: 50px;
     border: black 5px solid;
 }
 
@@ -29,7 +29,7 @@ p{
 }
 
 .opozorilo{
-    font-size: 30px;
+    font-size: 20px;
     color: whitesmoke;
 }
 
@@ -44,22 +44,23 @@ a{
     font-family: sans-serif;
 }
 
-.nova_igra{
+.nova_igra, .box input[type = "submit"]{
     padding: 10px 30px;
     margin: 0 15px;
     color: #21ebff;
     text-decoration: none;
     letter-spacing: 2px;
-    font-size: 30px;
+    font-size: 20px;
     transition: 0.6s;
     border-radius: 24px;
     border: solid #21ebff;
     background-color: black;
 }
 
-.nova_igra:hover{
+.nova_igra:hover, .box input[type = "submit"]:focus{
     background: #21ebff;
     color: #111;
+    margin-bottom: 10px;
 }
 
 
