--- a/views/baza.html
+++ b/views/baza.html
@@ -37,8 +37,8 @@
     % if stanje == model.ZMAGA:
         <p class="opozorilo"> Čestitke! Uspelo ti je pravilno uganiti!</p>
         
-        <a class="nova_igra" href="/nastavi_stopnjo/">NOVA IGRA</a>
-        <a class="nova_igra" href="/">GLAVNI MENI</a>
+        <a class="nova_igra" href="/nastavi_stopnjo/">Nova igra</a>
+        <a class="nova_igra" href="/">Glavni meni</a>
 
 
     % elif stanje == model.PORAZ: 
@@ -53,7 +53,7 @@
         </table>
 
         <a class="nova_igra" href="/nastavi_stopnjo/">Nova igra</a>
-        <a class="nova_igra" href="/">GLAVNI MENI</a>
+        <a class="nova_igra" href="/">Glavni meni</a>
 
     % else:
     <form action="/igraj/" method="POST" autocomplete="off">
