--- a/views/zacetna.html
+++ b/views/zacetna.html
@@ -11,7 +11,7 @@
     <a href="#">Tutorial</a>
     <a href="/nastavi_stopnjo/">Nastavi stopnjo</a>
     <a class="glavni" href="/nastavi_stopnjo/" method="post">IGRAJ</a>
-    <a href="#">Mojstri</a>
+    <a href="/mojstri/">Mojstri</a>
     <a href="/moje_igre/">Moje igre</a>
     <form action="/odjava/" method="post">
         <input type="submit" value="Odjava">
