--- a/css/prijava.css
+++ b/css/prijava.css
@@ -78,7 +78,9 @@ body
 
 a{
     color: #21ebff;
-    font-size: 20px;
+    font-size: 25px;
     font-family: sans-serif;
     text-decoration: none;
+    margin-top: 15px;
+    margin-left: 15px;
 }
