--- a/css/zacetna.css
+++ b/css/zacetna.css
@@ -25,8 +25,9 @@ a, input[type = "submit"] {
     font-size: 30px;
     transition: 0.6s;
     border-radius: 24px;
-    background-color: none;
+    background-color: black;
     border: none;
+    cursor: pointer;   
 }
 
 a.glavni{
