--- a/views/zacetna.html
+++ b/views/zacetna.html
@@ -8,11 +8,9 @@
     <link rel="stylesheet" href="/css/zacetna.css">
 </head>
 <body>
-    <a href="#">Tutorial</a>
-    <a href="/nastavi_stopnjo/">Nastavi stopnjo</a>
     <a class="glavni" href="/nastavi_stopnjo/" method="post">IGRAJ</a>
     <a href="/mojstri/">Mojstri</a>
-    <a href="/moje_igre/">Moje igre</a>
+    <a href="/navodila/">Navodila</a>
     <form action="/odjava/" method="post">
         <input type="submit" value="Odjava">
     </form>
